# test-axum

./: .env  Cargo.toml  README.md  SeaOrm.toml
migration/src/: lib.rs  m20250331_044411_create_users_table.rs  m20250331_083103_add_column_to_users.rs  m20250331_085326_add_posts.rs  m20250331_085657_add_user_relation_to_posts.rs
src/: db.rs  error.rs  main.rs  routes.rs  state.rs
src/dto/: jwt_dto.rs  mod.rs  post_dto.rs  user_dto.rs
src/entities/: mod.rs  post.rs  prelude.rs  user.rs
src/handlers/: auth_handler.rs  mod.rs  posts_handler.rs
src/midlewares/: auth_midleware.rs  mod.rs  posts_midleware.rs
src/utils/: jwt.rs  mod.rs  password_util.rs
