[package]
name = "test-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
bcrypt = "0.17.0"
chrono = {version="0.4.40", features=["serde"]}
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
r2d2 = "0.8.10"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = {version="0.6.2", features=["cors", "trace"]}
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = {version="0.20.0", features=["derive"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
